Changes to fix search icon from being hidden as well as layout shift when keypress on clear icon. Removing background to align with figma design.

--- a/ui.frontend/src/main/webpack/components/content/core-search-results/v1/search-results/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-search-results/v1/search-results/style.scss
@@ -36,7 +36,6 @@
     .magic-box .magic-box-input>input {
         padding: 12px 50px 12px 16px;
         border: 1px solid #5B6062;
-        background: var(--white);
     }
 
     .CoveoSearchButton.coveo-accessible-button {
